<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Aparência">

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:summary="%s"
            app:title="Tema do aplicativo" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_notifications">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="notifications_enabled"
            app:title="@string/settings_notifications_title"
            app:summaryOn="@string/settings_notifications_summary_on"
            app:summaryOff="@string/settings_notifications_summary_off" />

    </PreferenceCategory>

</PreferenceScreen>